<resources>
    <string name="app_name">ProjectDIA</string>
    <string name="haveAccount">Have an account?</string>
    <string name="buttonRegister">sign up</string>
    <string name="hintPin">Password</string>
    <string name="hintEmail">Email</string>
    <string name="home">home</string>
    <string name="application">application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">profile</string>
    <string name="PickImage">Pick Image</string>
    <string name="Movie">Movie</string>
    <string name="login">Login</string>
    <string name="NoAccount">Don\'t have an account ?</string>
    <string name="forgotPin">Forgot Password?</string>
    <string name="sigUp">Sign-up</string>
    <string name="hintName">Name</string>
</resources>